# done_server

./: Cargo.toml  README.md  Rocket.toml  aws_deploy.sh  aws_dev_setup.sh  aws_ec2_amzlinux_setup.sh
assets/: form-logic.js  style.css
sql/: schema.sql
src/: db.rs  forms.rs  main.rs  routes.rs  security.rs  state.rs
src/db/: reprs.rs
src/routes/: api.rs
templates/: index.html.tera  login.html.tera  signup.html.tera  tasks.html.tera
templates/include/: header.html.tera  macros.html.tera  meta.tera  nav.html.tera
