[package]
name = "done_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = [ "secrets" ] }
rocket_dyn_templates = { version = "0.1.0", features = [ "tera" ] }
rocket_db_pools = { version = "0.1.0", features = [ "sqlx_mysql" ] }
toml = "0.8.8"
serde = "1.0.193"
sqlx = { version = "0.7", default-features = false, features = [ "migrate" ] }
uuid = { version = "1.6.1", features = [ "v4" ] }
argon2 = { version = "0.5.2", features = [ "password-hash" ] }